--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -91,6 +91,7 @@
   .toggle .lineThree {
     transform: rotate(45deg) translate(-5px, -6px);
   }
+  overflow-x: hidden;
 }
 
 @include medium {
